# asciiscope

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
docs/: CLAP_STARTINGPOINT_HANDOFF.md
include/: asciiscope.hpp
include/asciiscope/: AnimationScene.hpp  AsciiOscilloscope.hpp  ConsoleRenderer.hpp  DemoSignalInput.hpp  SignalInput.hpp
include/asciiscope/src/: AsciiOscilloscope.cpp
src/: AnimationScene.cpp  ConsoleRenderer.cpp  DemoSignalInput.cpp  SignalInput.cpp  main.cpp
